# console-watcher

./: ConsoleColor.cpp  ConsoleColor.h  ConsoleWatcher.cpp  ConsoleWatcher.h  IObserver.h  Logger.cpp  Logger.h  Makefile.am  MouseObserver.cpp  MouseObserver.h  ObservedString.h  configure.ac  main.cpp
.github/workflows/: c-cpp.yml
