bin_PROGRAMS = console-watcher
console_watcher_SOURCES = \
    main.cpp \
    ConsoleWatcher.cpp \
    ConsoleWatcher.h \
    ConsoleColor.cpp \
    ConsoleColor.h \
    ObservedString.h \
    Logger.cpp \
    Logger.h \
    MouseObserver.cpp \
    MouseObserver.h \
    IObserver.h

# Linker flags to include X11 library
console_watcher_LDADD = $(X_LIBS) -lX11

